--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body {
-  background-color: bisque;
+  font-family: 'Roboto', sans-serif;
+  background-color: rgb(224, 224, 224);
+  height: 98vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  font-family: 'Roboto', sans-serif;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+}
+
+h2 {
+  text-align: center;
+  color: rgb(65, 65, 65);
+}
+
+form {
+  display: flex;
+  justify-content: space-between;
+}
+
+.add-task {
+  border: none;
+  height: 100%;
+  width: 80%;
+  padding: 5px 10px;
+}
+
+section {
+  background-color: white;
+  width: 60%;
+  height: min-content;
+  filter: drop-shadow(1px 5px 5px gray);
+}
+
+.to-do-list div {
+  display: flex;
+  justify-content: space-between;
+}
+
+p {
+  font-size: 14px;
+}
+
+.clear {
+  width: 100%;
+  height: 50px;
+  background-color: rgb(224, 224, 224);
+  border: 1px solid gray;
+  font-size: 16px;
+}
+
+.clear:hover {
+  background-color: gray;
+}
+
+hr {
+  margin: 0;
 }
